...
        Digest.Sha512,
    )

    val dummyEntries = listOf(
        TotpItem(
            name = "Google",
            extraInfo = "user@example.com",
            secret = "AAAAAAAAAA",
            periodSeconds = 3,
            Digest.Sha1,
        ),
        TotpItem(
            name = "GitHub",
...
